[package]
name = "timeline"
version = "0.3.1"
authors = ["Spaceface16518 <33424649+Spaceface16518@users.noreply.github.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "timeline"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
structopt = "0.2"
serde_yaml = "0.8"
serde_json = "1.0"
